# review-lens

./: .env.example  .gitattributes  .gitignore  README.md  config.yaml  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements.txt
app/: streamlit_app.py
data/processed/: .gitkeep
data/raw/: .gitkeep
data/sample/: sample_reviews.csv
models/: .gitkeep
notebooks/: 01_exploration.ipynb
reports/: semeval2014_results.json
scripts/: download_semeval.py  evaluate_semeval.py  run_pipeline.py  train_absa.py  train_extractor.py
src/reviewlens/: __init__.py  config.py  nltk_setup.py  pipeline.py
src/reviewlens/aggregate/: __init__.py  summary.py
src/reviewlens/aspects/: __init__.py  absa.py  baseline.py
src/reviewlens/clustering/: __init__.py  themes.py
src/reviewlens/data/: __init__.py  clean.py  ingest.py  split.py
src/reviewlens/evaluation/: __init__.py  metrics.py  run_eval.py  semeval.py
src/reviewlens/sentiment/: __init__.py  aspect_sentiment.py  transformer_absa.py  vader_baseline.py
src/reviewlens/training/: __init__.py  bio.py  common.py  examples.py  train_absa.py  train_extractor.py
tests/: conftest.py  test_aggregate.py  test_aspects.py  test_bio.py  test_clustering.py  test_data.py  test_eval_metrics.py  test_pipeline.py  test_semeval.py  test_sentiment.py  test_transformer_absa.py
