[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reviewlens"
version = "0.1.0"
description = "ReviewLens — Aspect-Based Review Intelligence (ABSA + theme clustering + dashboard)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Saud Satopay" }]
keywords = ["nlp", "absa", "aspect-based-sentiment-analysis", "transformers", "streamlit"]

# Core runtime deps (baseline pipeline + dashboard). Mirrors requirements-core.txt.
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "pyarrow>=14.0",
    "nltk>=3.8",
    "vaderSentiment>=3.3.2",
    "scikit-learn>=1.3",
    "streamlit>=1.30",
    "plotly>=5.18",
]

[project.optional-dependencies]
# Heavier transformer / embedding stack — see requirements.txt.
ml = [
    "torch>=2.1",
    "transformers>=4.38",
    "datasets>=2.16",
    "accelerate>=0.26",
    "seqeval>=1.2.2",
    "sentence-transformers>=2.3",
]
dev = [
    "pytest>=7.4",
    "ruff>=0.3.0",
    "ipykernel>=6.29",
]

[project.scripts]
reviewlens = "reviewlens.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
